--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quisquam sit at, beatae vel, sed dolores cumque nostrum doloremque perferendis pariatur recusandae harum, libero exercitationem laborum! Ex, dicta? Voluptate, corrupti!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis error earum in fugiat voluptate illum assumenda voluptatum soluta eius impedit ipsam itaque suscipit, sunt blanditiis fuga molestias exercitationem commodi ad.</p>
         </article>
     </main>
 </body>
